# flan

./: .gitignore  404.html  CMakeLists.txt  Doxyfile  LICENSE  README.md  config.h.in  flan.yml  index.html  readthedocs.yaml  setup.cfg
docs/: .readthedocs.yaml  _sidebar.md  conf.py  getting-started.md  index.md  installation.md  requirements.txt
docs/assets/: style.css
docs/source/: Installation.rst  api.rst  beginnerGuide.rst  beginners_guide.rst  conf.py  index.rst  inputOptions.rst  input_options.rst  installation.rst  publications.rst
include/: background.h  boris.h  collisions.h  constants.h  default_options.h  flan.h  flan_types.h  impurity.h  impurity_stats.h  impurity_transport.h  input_classes.h  kdtree.h  load_options.h  moeller_trumbore.h  nanbu_s_a.h  openadas.h  options.h  random.h  read_bkg.h  read_gkyl.h  read_gkyl_binary.h  read_input.h  read_test.h  save_results.h  timer.h  utilities.h  variance_reduction.h  vectors.h
install-deps/: build-adios1.sh  build-adios2.sh  build-boost.sh  build-hdf5.sh  build-msgpack.sh  build-netcdf-c.sh  build-netcdf-cxx.sh  build-opts.sh  build-zlib.sh  install-nanoflann.sh  mkdeps.sh  setup-conda-env.sh  setup-mamba-env.sh  setup-python-env.sh
installation/: index.html
lib/cmake/flan/: flanConfig-noconfig.cmake  flanConfig.cmake
machines/: configure.macos.sh  mkdeps.linux.sh  mkdeps.macos.sh  mkdeps.omega.sh  mkdeps.perlmutter.sh
python/: Impurity.cpp  Impurity.h  Impurity.pxd  calc_elec_field.py  calc_nanbu_A.py  diffusion_coefficient.py  flan_plots.py  imp_cpp.cpp  imp_cpp.pyx  impurity_transport.cpp  impurity_transport.pyx  openadas.cpp  openadas.pyx  read_gfile.py  read_gkyl.py  run_flan.py  save_netcdf.py  setup.py
python/archive/: Impurity.cpp  Impurity.h  Impurity.pxd  impurity_transport.cpp  openadas.cpp  setup.py
regression/: blank_input_file.cpp  iwl_test.cpp  read_gkyl_binary.cpp  reg_testcase1.py  sh_outward_v1.cpp
scripts/: flan_setup.sh  generate_flan_setup.sh  submit-flan-omega.sbatch  submit-flan-perlmutter.sbatch
search/: search_index.json
src/: CMakeLists.txt  Impurity.cpp  Impurity.h  Impurity.pxd  background.cpp  boris.cpp  collisions.cpp  constants.py  flan.cpp  flan_main.cpp  flan_plots.py  imp_cpp.pyx  impurity.cpp  impurity_stats.cpp  impurity_transport.cpp  impurity_transport.pyx  input_classes.cpp  kdtree.cpp  load_options.cpp  moeller_trumbore.cpp  openadas.cpp  openadas.pyx  options.cpp  output_results.py  read_bkg.cpp  read_gkyl.cpp  read_gkyl.py  read_gkyl_binary.cpp  read_gkyl_binary.cpp_dnc  read_input.cpp  read_input.h  read_input.py  read_test.cpp  run_flan.cpp  run_flan.py  save_netcdf.py  save_results.cpp  setup.py  timer.cpp  utilities.cpp  (+2 more)
tests/: iwl_test.cpp  test_curvature.cpp  test_exb.cpp  test_friction_force.cpp  test_gradb.cpp  test_polarization.cpp  testcase01.flan  testcase01.flin
