[metadata]
name = flan
version = 0.4
author = Shawn Zamperini
author_email = zamperinis@fusion.gat.com
description = Python scripts related to the execution and post-processing of Flan

[options]
package_dir = 
	=python
packages = find:

[options.packages.find]
where = python

[options.entry_points]
console_scripts = 
	read_gkyl = python.read_gkyl:main
	calc_elec_field = python.calc_elec_field:main
